--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                     </tr>
                                     <tr>
                                         <td width="50%">Nomor Registrasi Kendaraan</td>
-                                        <td width="50%">: B 9097 PYT</td>
+                                        <td width="50%">: B 9216 UFU</td>
                                     </tr>
                                     <tr>
                                         <td width="50%">Nomor Rangka Kendaraan</td>
